# mlt_extra_modules

./: AUTHORS  CMakeLists.txt  ChangeLog  Config.cmake.in  Makefile  README  README.md  configure  mlt-extra_modules.pc.in
cmake/: FindKdenlive.cmake  FindMLT.cmake
data/: typewriter.xml
src/modules/: Makefile
src/modules/rl/: CMakeLists.txt  Makefile  c_functions.cpp  configure  factory.c  filter_typewriter.c  filter_typewriter.cpp  filter_typewriter.yml  parsing_functions.cpp  typewriter.cpp  typewriter.h  xmlparser.cpp  xmlparser.h
